[package]
name = "mri-iseq"
description = "A library and CLI tool to interact with MRI instruction sequences."
version = "0.1.0"
authors = ["Simon Génier <1782845+animalsiknow@users.noreply.github.com>"]
homepage = "https://github.com/animalsiknow/mir-iseq"
license = "AGPL-3.0-or-later"
readme = "README.org"
edition = "2018"

[dependencies.bitfield]
version = "0.13"

[dependencies.clap]
version = "2.32"

[dependencies.cursed-collections]
version = "0.2"

[dependencies.encoding]
version = "0.2"

[dependencies.lazy_static]
version = "1.2"

[dependencies.nom]
version = "4.1"
features = ["verbose-errors"]

[dependencies.num-derive]
version = "0.2"
features = ["full-syntax"]

[dependencies.num-traits]
version = "0.2"

[dependencies.serde]
version = "1.0"

[dependencies.subprocess]
version = "0.1"
